Added bat images and animation, inline block, span tag, and bat float.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Assignment 4 | Bielicke</title>
 
   <!--Link to our style.css file -->
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 
+    <!--Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -14,9 +16,34 @@
       <h1>The Art of Edward Gorey</h1>
     </header>
 
-    <section class="top section">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <section class="top-section">
+      <p><span class="custon-text">Lorem ipsum dolor sit amet consectetur</span> adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
+
+    <section class="middle-section">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <img class="bat" src="image/bat.png" alt="Bat" title="Bat" />
+    </section>
+
+    <section class="bottom-section">
+      <img class="bat-bottom" src="image/bat.png" alt="Bat" title="Bat"/>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    </section>
+
+    <ul>
+      <li>Illustration #1</li>
+      <li>Illustration #2</li>
+      <li>Illustration #3</li>
+      <li>Illustration #4</li>
+    </ul>
+
+    <div>
+      <img class="flying-bat" src="image/bat.png" alt="Bat" title="Bat"/>
+    </div>
+
 
   </body>
 </html>
